# uenp-funcionarios

./: CMakeLists.txt
include/: empresa.h  funcionario.h  programa.h  tela.h  util.h
src/: empresa.c  funcionario.c  main.c  programa.c  tela.c  util.c
